# wase-engine

./: .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  documentation.md  main.cpp  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  cmake.yml
cmake/: FindSDL2.cmake  FindSDL2_ttf.cmake
core/: debug_draw.cpp  debug_draw.h  draw.cpp  draw.h  engine.cpp  engine.h  input.cpp  input.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h  timer.cpp  timer.h  window.cpp  window.h
core/managers/: resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h
core/utils/: log_utils.cpp  log_utils.h
ecs/: component.cpp  component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h
ecs/components/: audio_source.h  box_collider_2d.cpp  box_collider_2d.h  collider.cpp  collider.h  rigidbody.h  sprite_renderer.h  transform.h
ecs/components/colliders/: box_collider_2d.cpp  box_collider_2d.h  collider.cpp  collider.h
ecs/components/ui/: label.cpp  label.h
example-game/: main.cpp
example-game/scenes/: example_scene.cpp  example_scene.h
src/: engine.cpp  engine.h  main.cpp  sample.h
src/audio/: sound_buffer.cpp  sound_buffer.h  sound_device.cpp  sound_device.h  sound_source.cpp  sound_source.h
src/debugging/: log.h  log_manager.cpp  log_manager.h  open_al_check.h
src/ecs/components/: texture.h  transform.h
src/ecs/systems/: sprite_renderer.cpp  sprite_renderer.h
src/input/: input.cpp  input.h  key_state.h
src/io/: reading.cpp  reading.h  writing.cpp  writing.h  writing.inl
src/math/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
src/rendering/: ibo.cpp  ibo.h  orthographic_camera.cpp  orthographic_camera.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  vbo.cpp  vbo.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h
src/resources/: color.h  image.h  resource.h  resource_pool.cpp  resource_pool.h  resource_type.h
src/scene/: scene.cpp  scene.h  scene_context.h  scene_manager.cpp  scene_manager.h
src/sge/core/: draw.h  engine.cpp  engine.h  events.cpp  renderer.cpp  renderer.h  scene.cpp  terminate_exception.h  vector2.h  window.cpp
src/sge/core/managers/: resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h
src/sge/ecs/: component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h
src/sge/ecs/components/: animator.cpp  animator.h  audio_source.cpp  audio_source.h  sprite_renderer.cpp  sprite_renderer.h
src/sge/ecs/components/colliders/: box_collider_2d.cpp  collider.h
src/sge/ecs/components/ui/: label.cpp  label.h
src/sound/: music_buffer.cpp  music_buffer.h  music_player.cpp  music_player.h  sound_buffer.cpp  sound_buffer.h  sound_device.cpp  sound_device.h  sound_example.h  sound_source.cpp  sound_source.h
src/system/: configuration.h  window.cpp  window.h  window_mode.h
src/time/: time.cpp  time.h
src/wase/core/: draw.cpp  draw.h  engine.cpp  engine.h  events.cpp  events.h  input.cpp  input.h  renderer.cpp  renderer.h  scene.cpp  scene.h  size.h  terminate_exception.h  timer.cpp  timer.h  vector2.cpp  vector2.h  vector3.cpp  vector3.h  window.cpp  window.h
src/wase/core/managers/: resource_manager.cpp  resource_manager.h  scene_manager.cpp  scene_manager.h
src/wase/core/utils/: log_utils.cpp  log_utils.h
src/wase/ecs/: camera.h  component.cpp  component.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h
src/wase/ecs/components/: animator.cpp  animator.h  audio_source.cpp  audio_source.h  sprite_renderer.cpp  sprite_renderer.h  transform.h
src/wase/ecs/components/colliders/: box_collider_2d.cpp  box_collider_2d.h  collider.cpp  collider.h
src/wase/ecs/components/ui/: button.cpp  button.h  label.cpp  label.h
test/: CMakeLists.txt  component_test.cpp  entity_test.cpp
tests/: CMakeLists.txt  engine_test.cpp  sample_test.cpp
tests/assets/io/reading_tests/: test_file2.txt
tests/assets/io/subfolder/: inside_subfolder.txt
tests/debug/: log_manager_test.cpp
tests/io/: io_test.cpp  reading_test.cpp  writing_test.cpp
tests/math/: vector2_test.cpp  vector3_test.cpp
tests/resources/: resource_pool_test.cpp
tests/scene/: scene_manager_test.cpp
tests/time/: time_test.cpp
wase-assets/shaders/: sprite.frag  sprite.vert
